--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header role="banner">
     <h3 style="margin-top:0;">
-    <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+    <a href="{{ site.github.url}}/" title="Home">{{ site.title }}</a>
     <br><small>{{ site.tagline }}</small>
     </h3>
 </header>
