--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,6 @@
 <footer role="contentinfo">
     <hr>
     <nav style="margin-bottom:1rem;" role="navigation">
-        <a href="/about">About</a>
+        <a href="{{ site.github.url}}/about">关于</a>
     </nav>
-    <small>
-        Built with <a href="https://jekyllrb.com/">Jekyll</a>.
-    </small>
 </footer>
