--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
-<p style="font-size:90%;">Posted on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time></p>
+<p style="font-size:90%;">发表于 <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y年%-m月%-d日" }}</time></p>
 
 {{ content }}
